test/parser/error/err_21_if_then_missing.pl0
program p; 
var x; 
begin 
if x > 0 x := 1 
end